--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Talha Emre Çalargün | Kişisel Tanıtım</title>
+  <link rel="canonical" href="https://talhacalargun.com/" />
   <meta name="description" content="Girişimci, operasyon ve dijital dönüşüm odaklı. Expert Grup çatısı altında Parkexpert, Goods Real Estate, Formula Bilişim projeleri.">
   <meta property="og:title" content="Talha Emre Çalargün" />
   <meta property="og:description" content="Kısa kişisel tanıtım ve iletişim bağlantıları." />
