--- a/index.html
+++ b/index.html
@@ -3,17 +3,40 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>Talha Emre Çalargün | Kişisel Tanıtım</title>
+
+  <!-- Canonical & Robots -->
   <link rel="canonical" href="https://talhacalargun.com/" />
-  <meta name="description" content="Girişimci, operasyon ve dijital dönüşüm odaklı. Expert Grup çatısı altında Parkexpert, Goods Real Estate, Formula Bilişim projeleri.">
+  <meta name="robots" content="index, follow" />
+
+  <!-- Primary SEO -->
+  <meta name="description" content="Girişimci, operasyon ve dijital dönüşüm odaklı. Expert Grup çatısı altında Parkexpert, Goods Real Estate, Formula Bilişim projeleri." />
+  <meta name="theme-color" content="#0b0b0c" />
+
+  <!-- Open Graph -->
   <meta property="og:title" content="Talha Emre Çalargün" />
   <meta property="og:description" content="Kısa kişisel tanıtım ve iletişim bağlantıları." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://drive.google.com/uc?export=view&id=1NqG_CfkoituZpvOe6tKzTTizf7oqyniM" />
-  <meta name="theme-color" content="#0b0b0c" />
+  <meta property="og:url" content="https://talhacalargun.com/" />
+  <meta property="og:site_name" content="Talha Emre Çalargün" />
+
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Talha Emre Çalargün" />
+  <meta name="twitter:description" content="Kısa kişisel tanıtım ve iletişim bağlantıları." />
+  <meta name="twitter:image" content="https://drive.google.com/uc?export=view&id=1NqG_CfkoituZpvOe6tKzTTizf7oqyniM" />
+
+  <!-- Icons (isteğe göre /favicon.svg ekleyebilirsin) -->
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root{
       --bg:#0b0b0c;          /* koyu zemin */
@@ -70,12 +93,26 @@
       .grid{grid-template-columns:1fr}
     }
   </style>
+
+  <!-- Structured Data (SEO) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Talha Emre Çalargün",
+    "url": "https://talhacalargun.com/",
+    "jobTitle": "Girişimci / Operasyon / Dijital Dönüşüm",
+    "sameAs": [
+      "https://www.linkedin.com/in/talhaemrecalargun"
+    ]
+  }
+  </script>
 </head>
 <body>
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="logo">TEC</div>
+        <div class="logo" aria-label="TEC">TEC</div>
         <div>
           <strong>Talha Emre Çalargün</strong><br>
           <small style="color:var(--muted)">Girişimci • Operasyon • Dijital Dönüşüm</small>
@@ -100,8 +137,8 @@
         </div>
         <div class="cta">
           <a class="btn primary" href="#iletisim">İletişime Geç</a>
-          <a class="btn" href="/cv.pdf" target="_blank" rel="noopener">Özgeçmiş (PDF)</a>
-          <a class="btn" href="mailto:talha@expertgrup.istanbul">E‑posta</a>
+          <a class="btn" href="/cv.pdf" target="_blank" rel="noopener noreferrer">Özgeçmiş (PDF)</a>
+          <a class="btn" href="mailto:talha@expertgrup.istanbul">E-posta</a>
         </div>
       </div></div>
       <div class="avatar">
@@ -128,28 +165,28 @@
       <article class="card"><div class="card-inner">
         <h3>Seçili Çalışmalar</h3>
         <p>Samsun Piazza AVM otopark operasyonu | 
-        Parkexpert yönetim paneli & AI destekli müşteri iletişimi |
-        Kurumsal marka içerikleri (TR‑EN) ve web projeleri.</p>
+        Parkexpert yönetim paneli &amp; AI destekli müşteri iletişimi |
+        Kurumsal marka içerikleri (TR-EN) ve web projeleri.</p>
       </div></article>
     </section>
 
     <section id="isler" style="margin-top:22px">
       <div class="links">
-        <a class="link" href="https://www.parkexpert.net" target="_blank" rel="noopener">
+        <a class="link" href="https://www.parkexpert.net" target="_blank" rel="noopener noreferrer">
           <span>Parkexpert</span>
           <small>Otopark işletmeciliği</small>
         </a>
-        <a class="link" href="https://www.goodsrealestate.com" target="_blank" rel="noopener">
+        <a class="link" href="https://www.goodsrealestate.com" target="_blank" rel="noopener noreferrer">
           <span>Goods Real Estate</span>
           <small>Gayrimenkul danışmanlığı</small>
         </a>
-        <a class="link" href="https://www.formulabilisim.com.tr" target="_blank" rel="noopener">
+        <a class="link" href="https://www.formulabilisim.com.tr" target="_blank" rel="noopener noreferrer">
           <span>Formula Bilişim</span>
           <small>Yazılım ve otomasyon</small>
         </a>
-        <a class="link" href="https://expertimar.com" target="_blank" rel="noopener">
+        <a class="link" href="https://expertimar.com" target="_blank" rel="noopener noreferrer">
           <span>Expert İmar</span>
-          <small>Planlama & proje</small>
+          <small>Planlama &amp; proje</small>
         </a>
       </div>
     </section>
@@ -157,9 +194,9 @@
     <section id="iletisim" class="grid" style="margin-top:22px">
       <article class="card"><div class="card-inner">
         <h3>İletişim</h3>
-        <p>E‑posta: <a href="mailto:talha@expertgrup.istanbul">talha@expertgrup.istanbul</a></p>
-        <p>Telefon: <a href="https://wa.me/90530XXXXXXX" target="_blank" rel="noopener">+90 530 XXX XX XX (WhatsApp)</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/talhaemrecalargun" target="_blank" rel="noopener">linkedin.com/in/talhaemrecalargun</a></p>
+        <p>E-posta: <a href="mailto:talha@expertgrup.istanbul">talha@expertgrup.istanbul</a></p>
+        <p>Telefon: <a href="https://wa.me/90530XXXXXXX" target="_blank" rel="noopener noreferrer">+90 530 XXX XX XX (WhatsApp)</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/talhaemrecalargun" target="_blank" rel="noopener noreferrer">linkedin.com/in/talhaemrecalargun</a></p>
       </div></article>
       
       <article class="card"><div class="card-inner">
