--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <meta name="twitter:image" content="https://drive.google.com/uc?export=view&id=1NqG_CfkoituZpvOe6tKzTTizf7oqyniM" />
 
   <!-- Icons (isteğe göre /favicon.svg ekleyebilirsin) -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="icon" href="https://tacker2022.github.io/tec2030/favicon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="https://tacker2022.github.io/tec2030/apple-touch-icon.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
