--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
   <!-- Icons (isteğe göre /favicon.svg ekleyebilirsin) -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
   <!-- Fonts -->
