--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
   <meta name="twitter:image" content="https://drive.google.com/uc?export=view&id=1NqG_CfkoituZpvOe6tKzTTizf7oqyniM" />
 
   <!-- Icons (isteğe göre /favicon.svg ekleyebilirsin) -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+<!-- Faviconlar -->
+  <link rel="icon" href="/favicon.ico" sizes="any"><!-- Varsayılan (ICO formatı) -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg"><!-- Modern tarayıcılar için -->
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png"><!-- iOS için -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"><!-- Eski tarayıcılar için -->
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
