--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Talha Emre Çalargün | Kişisel Tanıtım</title>
+  <title>Talha Emre Çalargün | Girişimci • Operasyon • Dijital Dönüşüm</title>
+  <meta name="description" content="Talha Emre Çalargün - Şehir, teknoloji ve işin kesişiminde; otopark, gayrimenkul ve dijital dönüşüm projeleri. Parkexpert, Goods Real Estate ve Formula Bilişim ile sonuç odaklı işler.">
 
   <!-- Canonical & Robots -->
   <link rel="canonical" href="https://talhacalargun.com/" />
