--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <title>Talha Emre Çalargün | Girişimci • Operasyon • Dijital Dönüşüm</title>
   <meta name="description" content="Talha Emre Çalargün - Şehir, teknoloji ve işin kesişiminde; otopark, gayrimenkul ve dijital dönüşüm projeleri. Parkexpert, Goods Real Estate ve Formula Bilişim ile sonuç odaklı işler.">
 
+   <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVBXW9G069"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-CVBXW9G069');
+  </script>
+  
   <!-- Canonical & Robots -->
   <link rel="canonical" href="https://talhacalargun.com/" />
   <meta name="robots" content="index, follow" />
