--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
       <article class="card"><div class="card-inner">
         <h3>Not</h3>
-        <p>Bu sayfa GitHub Pages üzerinde barındırılmak üzere tek dosya halinde hazırlandı. <em>cv.pdf</em> dosyasını repoya ekleyerek üstteki butondan erişilebilir kılabilirsiniz.</p>
+        <p>Bu sayfa PROTOKOL Q üzerinde barındırılmak üzere tek dosya halinde hazırlandı. <em>cv.pdf</em> dosyasını repoya ekleyerek üstteki butondan erişilebilir kılabilirsiniz.</p>
       </div></article>
     </section>
 
