--- a/index.html
+++ b/index.html
@@ -174,18 +174,18 @@
       <article class="card"><div class="card-inner">
         <h3>Uzmanlık Alanları</h3>
         <ul class="list">
-          <li>Otopark işletmeciliği & gelir optimizasyonu</li>
-          <li>Raporlama: Dashboard, PDF/Excel otomasyonları</li>
-          <li>Gayrimenkul geliştirme & operasyon</li>
-          <li>Dijital dönüşüm ve yapay zekâ entegrasyonları</li>
+          <li>Otopark işletmeciliği & Gelir Optimizasyonu</li>
+          <li>Raporlama: Dashboard, PDF/Excel Otomasyonları</li>
+          <li>Gayrimenkul Geliştirme & Operasyon</li>
+          <li>Dijital Dönüşüm ve Yapay Zekâ Entegrasyonları</li>
         </ul>
       </div></article>
 
       <article class="card"><div class="card-inner">
         <h3>Seçili Çalışmalar</h3>
-        <p>Samsun Piazza AVM otopark operasyonu | 
-        Parkexpert yönetim paneli &amp; AI destekli müşteri iletişimi |
-        Kurumsal marka içerikleri (TR-EN) ve web projeleri.</p>
+        <p>Rönesans AVM Otopark Operasyonu | 
+        Expert Grup Yönetim Paneli &amp; AI Destekli Müşteri İletişimi |
+        Kurumsal Marka İçerikleri (TR-EN) ve Web Projeleri.</p>
       </div></article>
     </section>
 
@@ -193,19 +193,19 @@
       <div class="links">
         <a class="link" href="https://www.parkexpert.net" target="_blank" rel="noopener noreferrer">
           <span>Parkexpert</span>
-          <small>Otopark işletmeciliği</small>
+          <small>Otopark İşletmeciliği (HGS ile Kolay Otoparklar) </small>
         </a>
         <a class="link" href="https://www.goodsrealestate.com" target="_blank" rel="noopener noreferrer">
           <span>Goods Real Estate</span>
-          <small>Gayrimenkul danışmanlığı</small>
+          <small>Gayrimenkul Danışmanlığı</small>
         </a>
         <a class="link" href="https://www.formulabilisim.com.tr" target="_blank" rel="noopener noreferrer">
           <span>Formula Bilişim</span>
-          <small>Yazılım ve otomasyon</small>
+          <small>Yazılım ve Otomasyon</small>
         </a>
         <a class="link" href="https://expertimar.com" target="_blank" rel="noopener noreferrer">
           <span>Expert İmar</span>
-          <small>Planlama &amp; proje</small>
+          <small>Planlama &amp; Proje</small>
         </a>
       </div>
     </section>
@@ -222,20 +222,19 @@
         <h3>Hızlı Öz</h3>
         <ul class="list">
           <li>Konum: İstanbul</li>
-          <li>Odak: Operasyon, raporlama, marka</li>
-          <li>Diller: Türkçe, İngilizce</li>
-          <li>Görüşmeye uygun: Hafta içi 10:00–18:00 (TRT)</li>
+          <li>Odak: Operasyon, Raporlama, Marka</li>
+          <li>Görüşmeye uygun: Hafta içi&sonu 7/24</li>
         </ul>
       </div></article>
 
       <article class="card"><div class="card-inner">
         <h3>Not</h3>
-        <p>Bu sayfa PROTOKOL Q üzerinde barındırılmak üzere tek dosya halinde hazırlandı. <em>cv.pdf</em> dosyasını repoya ekleyerek üstteki butondan erişilebilir kılabilirsiniz.</p>
+        <p>Bu sayfa PROTOKOL Q üzerinde barındırılmak üzere tek dosya halinde hazırlandı.</p>
       </div></article>
     </section>
 
     <footer>
-      © <span id="yil"></span> TEC — Minimal, hızlı ve sade kişisel tanıtım sayfası.
+      © <span id="yil"></span> TEC
     </footer>
   </div>
 
