--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 
       <article class="card"><div class="card-inner">
         <h3>Seçili Çalışmalar</h3>
-        <p>Rönesans AVM Otopark Operasyonu | 
-        Expert Grup Yönetim Paneli &amp; AI Destekli Müşteri İletişimi |
+        <p>Expert Grup Yönetim Paneli &amp; AI Destekli Müşteri İletişimi |
+          Rönesans AVM Otopark Operasyonu |
         Kurumsal Marka İçerikleri (TR-EN) ve Web Projeleri.</p>
       </div></article>
     </section>
