--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <meta name="robots" content="index, follow" />
 
   <!-- Primary SEO -->
-  <meta name="description" content="Girişimci, operasyon ve dijital dönüşüm odaklı. Expert Grup çatısı altında Parkexpert, Goods Real Estate, Formula Bilişim projeleri." />
   <meta name="theme-color" content="#0b0b0c" />
 
   <!-- Open Graph -->
@@ -38,11 +37,12 @@
   <meta name="twitter:description" content="Kısa kişisel tanıtım ve iletişim bağlantıları." />
   <meta name="twitter:image" content="https://talhacalargun.com/assets/profile.jpg" />
 
-  <!-- Faviconlar -->
-  <link rel="icon" href="/favicon.ico" sizes="any">
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <!-- ✅ Faviconlar -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -193,7 +193,7 @@
       <div class="links">
         <a class="link" href="https://www.parkexpert.net" target="_blank" rel="noopener noreferrer">
           <span>Parkexpert</span>
-          <small>Otopark İşletmeciliği (HGS ile Kolay Otoparklar) </small>
+          <small>Otopark İşletmeciliği (HGS ile Kolay Otoparklar)</small>
         </a>
         <a class="link" href="https://www.goodsrealestate.com" target="_blank" rel="noopener noreferrer">
           <span>Goods Real Estate</span>
