--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
   <meta name="twitter:description" content="Kısa kişisel tanıtım ve iletişim bağlantıları." />
   <meta name="twitter:image" content="https://talhacalargun.com/assets/profile.jpg" />
 
-  <!-- ✅ Faviconlar -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <!-- 🔥 Favicon ve Uygulama Simgeleri -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
