--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <title>Talha Emre Çalargün | Girişimci • Operasyon • Dijital Dönüşüm</title>
   <meta name="description" content="Talha Emre Çalargün - Şehir, teknoloji ve işin kesişiminde; otopark, gayrimenkul ve dijital dönüşüm projeleri. Parkexpert, Goods Real Estate ve Formula Bilişim ile sonuç odaklı işler.">
+  <meta name="keywords" content="Talha Emre Çalargün, girişimci, otopark, Parkexpert, Goods Real Estate, Formula Bilişim, dijital dönüşüm, operasyon, Expert Grup">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVBXW9G069"></script>
@@ -93,7 +94,7 @@
 
     .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px;margin-top:28px}
     .grid .card-inner{padding:20px}
-    h3{margin:0 0 10px;font-size:18px}
+    h2{margin:0 0 10px;font-size:18px;color:var(--gold)}
     p{margin:0;color:#cfd0d6}
     .list{margin:10px 0 0;padding:0 0 0 16px;color:#cfd0d6}
 
@@ -119,8 +120,10 @@
     "name": "Talha Emre Çalargün",
     "url": "https://talhacalargun.com/",
     "jobTitle": "Girişimci / Operasyon / Dijital Dönüşüm",
+    "image": "https://talhacalargun.com/assets/profile.jpg",
     "sameAs": [
-      "https://www.linkedin.com/in/talhaemrecalargun"
+      "https://www.linkedin.com/in/talhaemrecalargun",
+      "https://talhacalargun.com/"
     ]
   }
   </script>
@@ -159,18 +162,18 @@
         </div>
       </div></div>
       <div class="avatar">
-        <img src="assets/profile.jpg" alt="Talha Emre Çalargün" class="photo" width="600" height="600">
+        <img src="assets/profile.jpg" alt="Talha Emre Çalargün - Profil Fotoğrafı" class="photo" width="600" height="600">
       </div>
     </section>
 
     <section id="hakkimda" class="grid">
       <article class="card"><div class="card-inner">
-        <h3>Hakkımda</h3>
+        <h2>Hakkımda</h2>
         <p>28 yaşında; saha operasyonu, raporlama sistemleri ve marka oluşturma konularında aktif çalışıyorum. Kısa vadede süreçleri <em>ölçülebilir</em> ve <em>otomasyon</em> odaklı kurgulamak, uzun vadede ise ölçeklenebilir iş modelleri oluşturmak ana odağım.</p>
       </div></article>
 
       <article class="card"><div class="card-inner">
-        <h3>Uzmanlık Alanları</h3>
+        <h2>Uzmanlık Alanları</h2>
         <ul class="list">
           <li>Otopark işletmeciliği & Gelir Optimizasyonu</li>
           <li>Raporlama: Dashboard, PDF/Excel Otomasyonları</li>
@@ -180,7 +183,7 @@
       </div></article>
 
       <article class="card"><div class="card-inner">
-        <h3>Seçili Çalışmalar</h3>
+        <h2>Seçili Çalışmalar</h2>
         <p>Expert Grup Yönetim Paneli &amp; AI Destekli Müşteri İletişimi |
           Rönesans AVM Otopark Operasyonu |
         Kurumsal Marka İçerikleri (TR-EN) ve Web Projeleri.</p>
@@ -210,14 +213,14 @@
 
     <section id="iletisim" class="grid" style="margin-top:22px">
       <article class="card"><div class="card-inner">
-        <h3>İletişim</h3>
+        <h2>İletişim</h2>
         <p>E-posta: <a id="link-mail" href="mailto:talha@expertgrup.istanbul">talha@expertgrup.istanbul</a></p>
         <p>Telefon: <a id="link-whatsapp" href="https://wa.me/90530XXXXXXX" target="_blank" rel="noopener noreferrer">+90 530 XXX XX XX (WhatsApp)</a></p>
         <p>LinkedIn: <a id="link-linkedin" href="https://www.linkedin.com/in/talhaemrecalargun" target="_blank" rel="noopener noreferrer">linkedin.com/in/talhaemrecalargun</a></p>
       </div></article>
       
       <article class="card"><div class="card-inner">
-        <h3>Hızlı Öz</h3>
+        <h2>Hızlı Öz</h2>
         <ul class="list">
           <li>Konum: İstanbul</li>
           <li>Odak: Operasyon, Raporlama, Marka</li>
@@ -226,7 +229,7 @@
       </div></article>
 
       <article class="card"><div class="card-inner">
-        <h3>Not</h3>
+        <h2>Not</h2>
         <p>Bu sayfa PROTOKOL Q üzerinde barındırılmak üzere tek dosya halinde hazırlandı.</p>
       </div></article>
     </section>
