--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>Talha Emre Çalargün | Girişimci • Operasyon • Dijital Dönüşüm</title>
-  <meta name="description" content="Talha Emre Çalargün - Şehir, teknoloji ve işin kesişiminde; otopark, gayrimenkul ve dijital dönüşüm projeleri. Parkexpert, Goods Real Estate ve Formula Bilişim ile sonuç odaklı işler.">
-  <meta name="keywords" content="Talha Emre Çalargün, girişimci, otopark, Parkexpert, Goods Real Estate, Formula Bilişim, dijital dönüşüm, operasyon, Expert Grup">
+  <meta name="description" content="Talha Emre Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları.">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVBXW9G069"></script>
@@ -17,14 +16,15 @@
     gtag('config', 'G-CVBXW9G069');
   </script>
   
-  <!-- Canonical & Robots -->
+  <!-- Canonical, Robots, Hreflang -->
   <link rel="canonical" href="https://talhacalargun.com/" />
+  <link rel="alternate" hreflang="tr-TR" href="https://talhacalargun.com/">
   <meta name="robots" content="index, follow" />
   <meta name="theme-color" content="#0b0b0c" />
 
   <!-- Open Graph -->
   <meta property="og:title" content="Talha Emre Çalargün" />
-  <meta property="og:description" content="Kısa kişisel tanıtım ve iletişim bağlantıları." />
+  <meta property="og:description" content="Talha Emre Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları." />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://talhacalargun.com/assets/profile.jpg" />
   <meta property="og:url" content="https://talhacalargun.com/" />
@@ -33,7 +33,7 @@
   <!-- Twitter Cards -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Talha Emre Çalargün" />
-  <meta name="twitter:description" content="Kısa kişisel tanıtım ve iletişim bağlantıları." />
+  <meta name="twitter:description" content="Talha Emre Çalargün: Otopark işletmeciliği, gayrimenkul ve dijital dönüşümde uzman girişimci. Parkexpert, Goods Real Estate ve Formula Bilişim markaları." />
   <meta name="twitter:image" content="https://talhacalargun.com/assets/profile.jpg" />
 
   <!-- 🔥 Favicon ve Uygulama Simgeleri -->
@@ -101,7 +101,7 @@
     .links{display:grid;grid-template-columns:repeat(2,1fr);gap:16px;margin-top:18px}
     .link{display:flex;align-items:center;justify-content:space-between;padding:16px;border-radius:14px;border:1px solid var(--border);background:#0f1014}
     .link span{color:#dcdce3}
-    .link small{color:var(--muted)}
+    .link small{color:#a9a9b3}
 
     footer{margin:34px 0 10px;color:#8e8f98;text-align:center;font-size:13px}
 
